--- a/index.html
+++ b/index.html
@@ -168,11 +168,23 @@
 
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Recipe App Live</h4>
-              <span>7/2023</span>
               <p class="timeline-text">
-                Developed a dynamic Django application allowing users to create recipes and seamlessly add
-                ingredients. Users can conveniently search for recipes by name or ingredient, manage their recipes,
-                and explore comprehensive data analytics on the recipe detail page.
+                This project was an opportunity to explore Django’s straightforward and efficient development process.
+                The focus was on designing a solid data model first, ensuring that the core logic—the “brain” of the
+                application—was well-structured before building out the user interface. Django’s built-in ORM made
+                managing database relationships seamless, while its automatic admin panel streamlined early testing and
+                data management.
+
+                The application was thoroughly tested using Django’s built-in testing framework, allowing for reliable
+                validation of features and ensuring a smooth user experience. PostgreSQL was used for production and
+                SQLite
+                was used for local testing. Pandas and Matplotlib enabled data analysis and
+                visualization. Deployment on Heroku, supported by dj-database-url, psycopg2-binary, gunicorn, and
+                whitenoise, ensured a scalable and efficient hosting solution. Additionally, Pillow was integrated for
+                handling user-uploaded images.
+
+                Django’s simplicity and robust features made the development process smooth, allowing for rapid
+                iteration and thorough testing at each stage.
               </p>
               <p class="timeline-text" style="padding-top: 20px;">
                 Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
@@ -180,14 +192,6 @@
               </p>
               <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
                 loading="lazy" />
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Recipe App Links</h4>
-              <p class="timeline-text" style="padding-top: 20px;">
-                Visit the recipe app website/check out the github to follow README.md for instructions on using the
-                website.
-              </p>
               <a class="gold asset-link" href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank"
                 style="padding-top: 20px;">
                 <p class="gold asset-link">Recipe App Heroku Site - Click to visit</p>
@@ -196,49 +200,26 @@
                 target="_blank">
                 <p class="gold asset-link">Github Repo - Click to visit</p>
               </a>
-
             </li>
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Recipe App Planning</h4>
 
-              <p class="timeline-text" style="padding-top: 20px;">
-                Throughout the course, we utilized flowcharts and schemas to structure project development.
-                Flowcharts
-                were instrumental in validating user journeys and anticipated behaviors, facilitating the
-                identification of any unexpected outcomes. Click the link below to see some of the planning
-                and work flow for the recipe app, including admin recipe creation.
-              </p>
-              <a class="gold asset-link" href="./assets/images/Charts-Flows.zip" download
-                style="padding-top: 20px;">Download Assets</a>
-              <div class="row" style="display: flex;">
-                <img src="./assets/images/Charts-Flows/recipe-app-schema.jpg" class="careerfoundry-image"
-                  alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%" />
-                <img src="./assets/images/Charts-Flows/flowchart_journey.png" class="careerfoundry-image"
-                  alt="Flow Chart" loading="lazy" style="padding-top: 25px; width: 40%;" />
-              </div>
-
-            </li>
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Practice Bookstore Live</h4>
-              <span>7/2023</span>
 
 
               <p class="timeline-text">
                 Developed a practice project to explore Django's Model-View-Template (MVT) architecture, user
-                authentication, and data analytics. Acquired proficiency in Django admin, migrations, and implementing
-                authorization for views and templates.
+                authentication, and data analytics. Acquired proficiency in key Django features, including the admin
+                interface, migrations, and implementing authorization for views and templates.
               </p>
 
               <p class="timeline-text" style="padding-top: 20px;">
                 Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
                 dj-database-url, psycopg2-binary, gunicorn, whitenoise,
-                pillow. The Bookstore Github repo is below.
+                pillow.
               </p>
               <a href="https://github.com/dlm1337/bookstore" style="padding-top: 20px;" target="_blank">
                 <p class="gold asset-link">Githup Repo - Click to visit</p>
               </a>
-              <img src="./assets/images/Bookstore_Heroku_App.jpg" alt="music" loading="lazy"
-                class="careerfoundry-image" />
             </li>
 
             <li class="timeline-item">
@@ -246,30 +227,25 @@
                 Recipe Console App
               </h4>
 
-              <span>6/2023</span>
-
 
               <p class="timeline-text">
-                Developed a recipe console application enabling users to add, remove, edit, and search
-                for recipes. Implemented a user-friendly interface that loops back to the main menu until the
-                designated exit command is entered.
+                Developed a recipe console application that allows users to manage their favorite recipes while
+                exploring the fundamentals of structuring a Python application. Using Python’s object-oriented features,
+                I organized the app with classes for better modularity and maintainability. SQLAlchemy provided a
+                flexible way to interact with databases, while MySQLclient and SQLite offered different storage options
+                to experiment with. IPython enhanced the development process with its interactive shell, making
+                debugging and testing more efficient. Setting up a virtual environment ensured dependency management and
+                project isolation, reinforcing best practices for maintaining clean and portable Python applications.
               </p>
 
               <p class="timeline-text" style="padding-top: 20px;">
-                Technologies used: Python, Django, SQLAlchemy, MySQLclient, Ipython, SQLite. Screenshots of app
-                use/Github below.
+                Technologies used: Python, SQLAlchemy, MySQLclient, Ipython, SQLite.
               </p>
 
               <a href="https://github.com/dlm1337/careerfoundry-python-course/tree/main/Achievement%201/exercise1.7/Exercise%201.7-Task"
                 target="_blank">
                 <p class="gold asset-link" style="padding-top: 20px;">Github Repo - Click to visit</p>
               </a>
-              <a class="gold asset-link" href="./assets/images/Recipe-Console-App.zip" download
-                style="padding-top: 20px;">Download Assets
-              </a>
-
-              <img src="./assets/images/Recipe-Console-App/step3.png" alt="music" loading="lazy"
-                class="careerfoundry-image" />
             </li>
           </ol>
         </section>
