--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
             </div>
-            <h3 class="h3">Work Experience</h3>
+            <h3 class="h3">Resume/Experience Summary</h3>
           </div>
 
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h2 class="h4 timeline-item-title">Resume Link</h2>
-              <a class="gold asset-link" href="assets/images/David_McNeill_RESUME1_29.pdf">View Resume</a>
+              <h2 class="h4 timeline-item-title">Official Resume</h2>
+              <a class="gold asset-link" href="assets/images/David_McNeill_RESUME1_29.pdf">View Resume - PDF</a>
             </li>
 
             <li class="timeline-item">
@@ -114,26 +114,25 @@
               </h4>
               <span>Current</span>
               <p class="timeline-text">
-                Contributed to diverse projects involving ASP.Net Core, Vue.js, Golang, and Angular. Also, led the
-                development of robust V3 Chrome Extensions, featuring seamless script injections and enhanced browser
-                accessibility. Played a key role in various projects, including the main website for Bleached-Solutions,
-                where I focused on ensuring high-quality user experiences through responsive UI/UX designs and efficient
-                data management.
+                Contributed to diverse projects involving ASP.NET Core, Angular, Golang, React, and Vue.js. Led the
+                development of V3 Chrome Extensions for customized data scraping. Played a key role in multiple
+                projects, including UI/UX design, database management, and API development.
               </p>
             </li>
 
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Intern at Revenue IQ</h4>
-              <span>9/2020 - 1/2021</span>
+              <span>9/2020 - 3/2021</span>
               <p class="timeline-text">
-                Conducted unit testing with Moq library on API controllers. Implemented a repository pattern to
-                facilitate comprehensive testing of the controllers, significantly improving code quality and
-                readability. Successfully isolated business logic into a service layer, abstracted database calls into a
-                repository, and ensured seamless communication between layers via interface contracts. Played a crucial
-                role in refactoring microservices, identifying and fixing bugs, and implementing testing environments
-                following the new design pattern. Containerized microservices using Docker and integrated them into
-                existing Jenkins builds. Additionally, assisted the senior developer with various tickets for Angular
-                frontend tweaks.
+                Conducted unit testing and refactoring on numerous microservices using the Moq library and repository
+                pattern. Successfully isolated business logic into a dedicated service layer, abstracted database calls
+                out of controllers, and established seamless communication between layers via interface contracts within
+                the new repository pattern. Implemented a structured service and repository layer to manage interactions
+                with the DbContext, ensuring a clean separation of concerns while promoting modularity and
+                maintainability. By decoupling database dependencies from controllers, significantly improved
+                testability, enabling fast, reliable unit tests without requiring direct database interactions. Played a
+                crucial role in refactoring microservices, identifying and fixing bugs, and establishing robust testing
+                environments aligned with the new design pattern.
               </p>
             </li>
           </ol>
@@ -168,6 +167,8 @@
 
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Recipe App Live</h4>
+              <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
+                loading="lazy" />
               <p class="timeline-text">
                 This project was an opportunity to explore Django’s straightforward and efficient development process.
                 The focus was on designing a solid data model first, ensuring that the core logic—the “brain” of the
@@ -190,8 +191,7 @@
                 Technologies used: Python, Django, JS, CSS, HTML, Heroku, Postgres, SQLite, Pandas, Matplotlib,
                 dj-database-url, psycopg2-binary, gunicorn, whitenoise, pillow
               </p>
-              <img src="./assets/images/butcher-block.png" class="careerfoundry-image" alt="Recipe App"
-                loading="lazy" />
+
               <a class="gold asset-link" href="https://serene-eyrie-98382-920f167cb9ee.herokuapp.com/" target="_blank"
                 style="padding-top: 20px;">
                 <p class="gold asset-link">Recipe App Heroku Site - Click to visit</p>
@@ -282,8 +282,23 @@
               </h4>
               <section class="projects" style="padding-top:20px">
                 <ul class="project-list">
-                  <li class="project-item active" data-filter-item data-category="web development">
+                  <li class="project-item active" data-filter-item data-category="web design">
                     <figure class="project-img" id="img1">
+                      <div class="project-item-icon-box">
+                        <ion-icon name="eye-outline"></ion-icon>
+                      </div>
+
+                      <img src="./assets/images/bleachss.png" alt="manos" loading="lazy" />
+                    </figure>
+
+                    <h3 class="project-title">Bleached Solultions</h3>
+
+                    <a href="https://bleachedsolutions.com">
+                      <p class="gold asset-link">Website - Click to visit</p>
+                    </a>
+                  </li>
+                  <li class="project-item active" data-filter-item data-category="web development">
+                    <figure class="project-img" id="img2">
                       <div class="project-item-icon-box">
                         <ion-icon name="eye-outline"></ion-icon>
                       </div>
@@ -298,19 +313,6 @@
                     </a>
                   </li>
 
-                  <li class="project-item active" data-filter-item data-category="web development">
-                    <figure class="project-img" id="img2">
-                      <div class="project-item-icon-box">
-                        <ion-icon name="eye-outline"></ion-icon>
-                      </div>
-
-                      <img src="./assets/images/Animatior-link.png" alt="unity" loading="lazy" />
-                    </figure>
-
-                    <h3 class="project-title">Unity</h3>
-
-                    <p class="project-category">2D games</p>
-                  </li>
 
                   <li class="project-item active" data-filter-item data-category="web design">
                     <figure class="project-img" id="img3">
@@ -337,37 +339,9 @@
 
                     <h3 class="project-title">Receiptify</h3>
 
-                    <p class="project-category">Reads images</p>
+                    <p class="project-category">OCR Project for Budget Tracking</p>
                   </li>
 
-                  <li class="project-item active" data-filter-item data-category="web design">
-                    <figure class="project-img" id="img5">
-                      <div class="project-item-icon-box">
-                        <ion-icon name="eye-outline"></ion-icon>
-                      </div>
-
-                      <img src="./assets/images/ammo.png" alt="manos" loading="lazy" />
-                    </figure>
-
-                    <h3 class="project-title">Manos Ammo</h3>
-
-                    <p class="project-category">Store stock and info</p>
-                  </li>
-                  <li class="project-item active" data-filter-item data-category="web design">
-                    <figure class="project-img" id="img6">
-                      <div class="project-item-icon-box">
-                        <ion-icon name="eye-outline"></ion-icon>
-                      </div>
-
-                      <img src="./assets/images/bleachss.png" alt="manos" loading="lazy" />
-                    </figure>
-
-                    <h3 class="project-title">Bleached Solultions</h3>
-
-                    <a href="https://bleachedsolutions.com">
-                      <p class="gold asset-link">Website - Click to visit</p>
-                    </a>
-                  </li>
                 </ul>
               </section>
             </li>
