--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
   <meta prefix="og: https://dlm1337.github.io/" property="og:title" content="David McNeill's Portfolio">
   <meta prefix="og: https://dlm1337.github.io/" property="og:description"
-    content="Overview of career and learning achievements. Playable game included!">
+    content="Software Development Portfolio">
   <meta prefix="og: https://dlm1337.github.io/" property="og:image"
     content="https://dlm1337.github.io/assets/images/dlm1337.png">
 </head>
