new link for projects- appo retreats

--- a/index.html
+++ b/index.html
@@ -326,7 +326,9 @@
 
                     <h3 class="project-title">APPO Retreats</h3>
 
-                    <p class="project-category">Trip planning</p>
+                    <a href="https://gazl.bleachedsolutions.com/home">
+                      <p class="gold asset-link">Website - Click to visit</p>
+                    </a>
                   </li>
 
                   <li class="project-item active" data-filter-item data-category="applications">
