--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <ol class="timeline-list">
             <li class="timeline-item">
               <h2 class="h4 timeline-item-title">Official Resume</h2>
-              <a class="gold asset-link" href="assets/images/David_McNeill_RESUME1_29.pdf">View Resume - PDF</a>
+              <a class="gold asset-link" href="assets/images/David_McNeill_Resume4-30 (6).pdf">View Resume - PDF</a>
             </li>
 
             <li class="timeline-item">
