--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
             </div>
-            <h3 class="h3">Resume/Experience Summary</h3>
+            <h3 class="h3">Experience</h3>
           </div>
 
           <ol class="timeline-list">
