--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Experience</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="resetSidebar()">CareerFoundry</button>
+            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Bootcamp</button>
           </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Projects</button>
