more changes to sidebar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
   <meta prefix="og: https://dlm1337.github.io/" property="og:title" content="David McNeill's Portfolio">
-  <meta prefix="og: https://dlm1337.github.io/" property="og:description"
-    content="Software Development Portfolio">
+  <meta prefix="og: https://dlm1337.github.io/" property="og:description" content="Software Development Portfolio">
   <meta prefix="og: https://dlm1337.github.io/" property="og:image"
     content="https://dlm1337.github.io/assets/images/dlm1337.png">
 </head>
@@ -32,12 +31,6 @@
 
           <p class="title">Full-Stack Developer</p>
         </div>
-
-        <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
-
-          <ion-icon name="chevron-down"></ion-icon>
-        </button>
       </div>
 
       <div class="sidebar-info_more">
