--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
           <p class="title">Full-Stack Developer</p>
         </div>
+
+        <button class="info_more-btn" data-sidebar-btn>
+          <span>Show Contacts</span>
+
+          <ion-icon name="chevron-down"></ion-icon>
+        </button>
       </div>
 
       <div class="sidebar-info_more">
@@ -71,7 +77,7 @@
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Experience</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="resetSidebar()">Bootcamp</button>
+            <button class="navbar-link" data-nav-link onclick="resetSidebar()">CareerFoundry</button>
           </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link onclick="resetSidebar()">Projects</button>
