changes to sidebar

--- a/index.html
+++ b/index.html
@@ -23,15 +23,26 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/IMG_20220915_104131.jpg" alt="David McNeill" width="90" />
+          <img src="./assets/images/IMG_20220915_104131.jpg" alt="David McNeill" width="100" />
         </figure>
 
         <div class="info-content">
           <h1 class="name" title="David McNeill">David McNeill</h1>
           <p class="title">Full-Stack Developer</p>
-        </div> 
-        
+        </div>
+
         <ul class="contacts-list">
+          <li class="contact-item">
+            <div class="icon-box">
+              <ion-icon name="reader-outline"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">Resume</p>
+              <a href="assets/images/David_McNeill_Resume4-30 (6).pdf" class="contact-link">View Resume - PDF</a>
+            </div>
+          </li>
+
           <li class="contact-item">
             <div class="icon-box">
               <ion-icon name="mail-outline"></ion-icon>
@@ -91,10 +102,6 @@
           </div>
 
           <ol class="timeline-list">
-            <li class="timeline-item">
-              <h2 class="h4 timeline-item-title">Official Resume</h2>
-              <a class="gold asset-link" href="assets/images/David_McNeill_Resume4-30 (6).pdf">View Resume - PDF</a>
-            </li>
 
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">
