making general info able to hide.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <main>
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
+        <button class="info_more-btn" data-sidebar-btn>
+          <ion-icon name="chevron-down"></ion-icon>
+        </button>
         <figure class="avatar-box">
           <img src="./assets/images/IMG_20220915_104131.jpg" alt="David McNeill" width="100" />
         </figure>
