--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <h2 class="h2 article-title gold">Game</h2>
         </header>
         <div style="position: relative; padding-top: 56.25%; width: 100%;">
-          <iframe src="assets/game/Laser3.0webgl/index.html" frameborder="0" allowfullscreen
+          <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
         </div>
 
