getting closer i think

--- a/assets/game/Laser_Build1/index.html
+++ b/assets/game/Laser_Build1/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="webgl-content">
-    <div id="unityContainer" style="width: 100vw; height:max-content"></div>
+    <div id="unityContainer" style="width: 100vw; height:100vh"></div>
     <div class="footer">
       <div class="webgl-logo"></div>
       <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
