--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <h2 class="h2 article-title gold">Game</h2>
         </header>
         <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
-          style="position: absolute; top: 0; left: 0; width: 100vw; height: 100%;"></iframe>
+          style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></iframe>
       </article>
     </div>
   </main>
