--- a/assets/game/Laser_Build1/index.html
+++ b/assets/game/Laser_Build1/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="webgl-content">
-    <div id="unityContainer" style="width: 100vw; height: 600px;"></div>
+    <div id="unityContainer" style="max-width: 600px; min-width: 300px; height: 500px;"></div>
     <div class="footer">
       <div class="webgl-logo"></div>
       <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
