--- a/index.html
+++ b/index.html
@@ -357,8 +357,11 @@
         <header>
           <h2 class="h2 article-title gold">Game</h2>
         </header>
-        <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
-          style="position: absolute; top: 0; left: 0; max-width: 600px; min-width: 300px; height: 500px;"></iframe>
+        <div style="position: relative; padding-top: 12%; width: 100%;">
+          <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
+            style="position: absolute; top: 0; left: 0; max-width: 600px; width: max-content; max-height: 500px; height: max-content;">
+          </iframe>
+        </div>
       </article>
     </div>
   </main>
