--- a/assets/game/Laser_Build1/index.html
+++ b/assets/game/Laser_Build1/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="webgl-content">
-    <div id="unityContainer" style="max-width: 600px; width: max-content; max-height: 500px; height: max-content;">
+    <div id="unityContainer" style="width: max-content; height: max-content;">
     </div>
     <div class="footer">
       <div class="webgl-logo"></div>
