--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         </header>
         <div style="position: relative; padding-top: 12%; width: 100%;">
           <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
-            style="position: absolute; top: 0; left: 0; max-width: 600px; width: max-content; max-height: 500px; height: max-content;">
+            style="position: absolute; top: 0; left: 0; width: max-content; height: max-content;">
           </iframe>
         </div>
       </article>
