--- a/assets/game/Laser_Build1/index.html
+++ b/assets/game/Laser_Build1/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="webgl-content">
-    <div id="unityContainer" style="width: 300px; height: 500px;">
+    <div id="unityContainer" style="width: 100%; height: 500px;">
     </div>
     <div class="footer">
       <div class="webgl-logo"></div>
