--- a/index.html
+++ b/index.html
@@ -354,12 +354,9 @@
 
 
       <article class="game game-article" data-page="game">
-        <header>
-          <h2 class="h2 article-title gold">Game</h2>
-        </header>
         <div style="position: relative; padding-top: 12%; width: 100%;">
           <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
-            style="position: absolute; top: 0; left: 0; width: 300px; height: 500px;">
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 500px;">
           </iframe>
         </div>
       </article>
