--- a/assets/game/Laser_Build1/index.html
+++ b/assets/game/Laser_Build1/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-  <div class="webgl-content">
-    <div id="unityContainer" style="width: 100%; height: 500px;">
-    </div>
-    <div class="footer">
-      <div class="webgl-logo"></div>
-      <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-      <div class="title">Laser</div>
-    </div>
+  <!-- Aspect-ratio wrapper for Unity WebGL -->
+  <div id="unityContainer" style="position: relative; width: 100%; padding-top: 56.25%;">
+    <canvas style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></canvas>
+  </div>
+  <div class="footer">
+    <div class="webgl-logo"></div>
+    <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+    <div class="title">Laser</div>
   </div>
 </body>
 
