--- a/index.html
+++ b/index.html
@@ -354,9 +354,10 @@
 
 
       <article class="game game-article" data-page="game">
-        <div style="position: relative; padding-top: 12%; width: 100%;">
+        <!-- 16:9 ratio wrapper -->
+        <div style="position: relative; width: 100%; padding-top: 56.25%; max-width: 100%;">
           <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 500px;">
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;">
           </iframe>
         </div>
       </article>
