--- a/assets/game/Laser_Build1/index.html
+++ b/assets/game/Laser_Build1/index.html
@@ -15,16 +15,18 @@
 </head>
 
 <body>
-  <!-- Aspect-ratio wrapper for Unity WebGL -->
-  <div id="unityContainer" style="position: relative; width: 100%; padding-top: 56.25%; min-height: 560px;">
-    <canvas style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></canvas>
+  <div class="webgl-content">
+    <div id="unityContainer" style="position: relative; width: 100%; padding-top: 56.25%; min-height: 560px;">
+      <canvas style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></canvas>
 
-    <div class="footer">
-      <div class="webgl-logo"></div>
-      <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-      <div class="title">Laser</div>
+      <div class="footer">
+        <div class="webgl-logo"></div>
+        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+        <div class="title">Laser</div>
+      </div>
     </div>
   </div>
+
 </body>
 
 </html>
