kind of working

--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
         <header>
           <h2 class="h2 article-title gold">Game</h2>
         </header>
-        <iframe src="assets/game/Laser_Build1/index.html" frameborder="0" allowfullscreen
-          style="position: relative; width: 100%; height: 100%; border: none;">
-        </iframe>
+        <div class="game-wrapper">
+          <iframe src="assets/game/Laser_Build4/index.html" frameborder="0" allowfullscreen class="game-frame"></iframe>
+        </div>
       </article>
     </div>
   </main>
