laser_buildx and controls added

--- a/index.html
+++ b/index.html
@@ -358,8 +358,20 @@
           <h2 class="h2 article-title gold">Game</h2>
         </header>
         <div class="game-wrapper">
-          <iframe src="assets/game/Laser_Build5/index.html" frameborder="0" allowfullscreen class="game-frame"></iframe>
+          <iframe src="assets/game/Laser_BuildX/index.html" frameborder="0" allowfullscreen class="game-frame"></iframe>
         </div>
+        <ol class="timeline-list">
+          <li class="timeline-item">
+            <h4 class="h4 timeline-item-title">Controls</h4>
+            <p class="timeline-text">
+              - W, A, S, D/joystick to move.
+            </p>
+
+            <p class="timeline-text">
+              - Space/red button to fire weapons.
+            </p>
+          </li>
+        </ol>
       </article>
     </div>
   </main>
